Java 21 for LTS Stability, Added Swagger UI, Maven for Build and Docker Compose for encapsulation, Layered testing Unit, Integration, Smoke, E2E and other improvements